--- a/app/scripts/templates/playlist.ejs
+++ b/app/scripts/templates/playlist.ejs
@@ -1,7 +1,7 @@
 <li>
     <% for(var i=0; i<collection.length; i++) { %>
         <li>
-            <%= collection[i].id %>>
+            <%= collection[i].id %>
         </li>
     <% } %>
 </li>
